# news_feed_scrapping

./: README.md  pyproject.toml
news_scrapping/: app.py  article_classifier.py  config.json  rss_feed_parser.py  rss_feed_updater.py
news_scrapping/db/: articles.db  database_handler.py
